Fixed spacing and renamed CSS file (#86)
* Fixed spacing and renamed CSS file

* Removed the style ignore after CSS file rename

--- a/assets/style/bioconductor.css
+++ b/assets/style/bioconductor.css
@@ -7,6 +7,7 @@ body {
 
 main {
   background: var(--neutral-n50);
+  margin: 1rem 0;
 }
 
 .container {
